[tool.poetry]
name = "qa-guru-bromium"
version = "0.1.0"
description = ""
authors = ["Andrei Arkhipov <it.arkhipov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.11.2"
webdriver-manager = "^4.0.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"